--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <div id="titleDiv">
       <h1>JOSHUA SMITH</h1>
       <p>Hi there. I have a really, really common name.</p>
-      <p>Sometimes I do stuff. I made this to show you what it can be.</p>
-      <p>Enjoy!</p>
+      <p>Sometimes I do stuff. Welcome to the show.</p>
     </div>
     <div class="content leftContent">
       <h3>well</h3>
