--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div id="titleDiv">
       <h1>JOSHUA SMITH</h1>
-      <p>Hi there. I have a really, really common name.</p>
+      <p>Hi there! I have a really, really common name.</p>
       <p>Sometimes I do stuff. Welcome to the show.</p>
     </div>
     <div class="content leftContent">
