--- a/aboutme.html
+++ b/aboutme.html
@@ -3,13 +3,20 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="mainStyle.css">
+  <link rel="stylesheet" href="css/mainStyle.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
   <title>The Generic Name</title>
 </head>
   <body>
-    <h1>hello, world</h1>
+    <div id="topBar">
+      <center>
+      <button class="stinkyButtons">Home</button>
+      <button class="stinkyButtons">Blogs</button>
+      <button class="stinkyButtons">Contraptions</button>
+      <button class="stinkyButtons">About Me</button>
+    </div>
+    <h1>Hello, World</h1>
   </body>
 </html>
