--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <button class="stinkyButtons">Home</button>
       <button class="stinkyButtons">Blogs</button>
       <button class="stinkyButtons">Contraptions</button>
-      <button class="stinkyButtons">About Me</button>
+      <button onclick="window.location.href='https://westfallcoyote.github.io/aboutme.html';" class="stinkyButtons">About Me</button>
     </div>
     <div id="titleDiv">
       <h1>JOSHUA SMITH</h1>
