--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div id="topBar">
       <center>
-      <button class="stinkyButtons">Home</button>
+      <button onclick="window.location.href='https://westfallcoyote.github.io';"class="stinkyButtons">Home</button>
       <button class="stinkyButtons">Blogs</button>
       <button class="stinkyButtons">Contraptions</button>
       <button onclick="window.location.href='https://westfallcoyote.github.io/aboutme.html';" class="stinkyButtons">About Me</button>
