--- a/aboutme.html
+++ b/aboutme.html
@@ -12,10 +12,10 @@
   <body>
     <div id="topBar">
       <center>
-      <button class="stinkyButtons">Home</button>
-      <button class="stinkyButtons">Blogs</button>
-      <button class="stinkyButtons">Contraptions</button>
-      <button class="stinkyButtons">About Me</button>
+        <button onclick="window.location.href='https://westfallcoyote.github.io';"class="stinkyButtons">Home</button>
+        <button class="stinkyButtons">Blogs</button>
+        <button class="stinkyButtons">Contraptions</button>
+        <button onclick="window.location.href='https://westfallcoyote.github.io/aboutme.html';" class="stinkyButtons">About Me</button>
     </div>
     <h1>Hello, World</h1>
   </body>
