--- a/aboutme.html
+++ b/aboutme.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="css/mainStyle.css">
+  <link rel="stylesheet" href="css/aboutMe.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
@@ -17,6 +18,23 @@
         <button class="stinkyButtons">Contraptions</button>
         <button onclick="window.location.href='https://westfallcoyote.github.io/aboutme.html';" class="stinkyButtons">About Me</button>
     </div>
-    <h1>Hello, World</h1>
+    <div id="titleDiv">
+      <h1>WHO AM I, REALLY?</h1>
+    </div>
+    <div ="mainBox">
+      <div id="contentLeft" class="content">
+        <h3>I'm afraid even I couldn't tell you, but I'll try my best.</h3>
+        <p>My name is Joshua Smith. I live in Colorado. I'm 22 years old.
+        I enjoy long walks in the mountains and coffee darker than night.</p>
+
+      </div>
+      <div id="contentRight" class="content">
+        <p>I haven't had much formal training! I'm self taught in programming.</p>
+        <p>I also enjoy writing music, drawing, and creating crazy contraptions that
+        make absolutely zero positive impact on human existence.</p>
+        <!-- <img id="infoPic" src="src/photos/infoPic.jpg"> -->
+        <p>hello world</p>
+      </div>
+    </div>
   </body>
 </html>
