--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <center>
       <button onclick="window.location.href='https://westfallcoyote.github.io';"class="stinkyButtons">Home</button>
       <button class="stinkyButtons">Blogs</button>
-      <button class="stinkyButtons">Contraptions</button>
+      <button class="stinkyButtons">Writing</button>
       <button onclick="window.location.href='https://westfallcoyote.github.io/aboutme.html';" class="stinkyButtons">About Me</button>
     </div>
     <div id="titleDiv">
