--- a/aboutme.html
+++ b/aboutme.html
@@ -15,25 +15,28 @@
       <center>
         <button onclick="window.location.href='https://westfallcoyote.github.io';"class="stinkyButtons">Home</button>
         <button class="stinkyButtons">Blogs</button>
-        <button class="stinkyButtons">Contraptions</button>
+        <button class="stinkyButtons">Writing</button>
         <button onclick="window.location.href='https://westfallcoyote.github.io/aboutme.html';" class="stinkyButtons">About Me</button>
     </div>
     <div id="titleDiv">
       <h1>WHO AM I, REALLY?</h1>
     </div>
-    <div ="mainBox">
+    <div id="mainBox">
       <div id="contentLeft" class="content">
         <h3>I'm afraid even I couldn't tell you, but I'll try my best.</h3>
         <p>My name is Joshua Smith. I live in Colorado. I'm 22 years old.
         I enjoy long walks in the mountains and coffee darker than night.</p>
+        <p>I'm too tired to think of any interesting information employers might
+        actually wanna see at the moment.</p>
+        <p>Here's some filler text.</p>
+        <p>Man, whenever I get ice cream from the ice cream store, it's always frozen?</p>
+        <p>What's up with that?</p>
 
       </div>
       <div id="contentRight" class="content">
-        <p>I haven't had much formal training! I'm self taught in programming.</p>
-        <p>I also enjoy writing music, drawing, and creating crazy contraptions that
-        make absolutely zero positive impact on human existence.</p>
-        <!-- <img id="infoPic" src="src/photos/infoPic.jpg"> -->
-        <p>hello world</p>
+
+        <img class="photo" src="src/photos/infoPic.jpg">
+
       </div>
     </div>
   </body>
