--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
     </div>
     <div class="content leftContent">
       <h3>well</h3>
-      <p>pretend this is content</p>
-      <p>pretend this is content</p>
-      <p>pretend this is content</p>
-      <p>pretend this is content</p>
+      <p>PRETEND this is content</p>
+      <p>pretend THIS is content</p>
+      <p>pretend this IS content</p>
+      <p>pretend this is CONTENT</p>
     </div>
     <div class="content rightContent">
       <h3>also</h3>
-      <p>pretend this too, is real, genuine, content</p>
+      <p>pretend this, too, is real, genuine, content</p>
     </div>
     <div class="content leftContent">
-      <h3>maybe more.</h3>
+      <h3>maybe more?</h3>
       <p>yeah, probably.</p>
     </div>
     <div class="content rightContent">
